[changed]: Router class changed to support user-defined routes to prevent bad URLs.
[new]: Request class handles input request, special requests and URL building.
[changed]: Error template is now it's own template, not part of a template.
[fixed]: User defined routes can now specify controllers in subdirectories.
[new]: URI can be constructed from a route.

(4th August 2010)
-----------------------------------------------
[new]: Inflector class added.
[changed]: What were plugins are now called extenders. Plugins have been redone.
[new]: Extender class added.
[new]: Thumbnail plugin created, this is more of an example plugin.

(3rd August 2010)
-----------------------------------------------
[changed]: Folder structure has been updated to allow better understanding of where
things should belong.
[changed]: A template parser is no longer supported, however support for Smarty will
be added.
[new]: Libraries can be autoloaded by a controller via the $libs property.
[new]: Basic Smarty implementation. Smarty cannot use Helpers, both in views and in 
templates. Smarty can be unhooked, which will call a method supplied in params unhook.

(1st August 2010)
-----------------------------------------------
[changed]: The entire system has been re-done as a static system to allow easier
access to the different libraries.
[changed]: File names no longer have .view, .model, .section and .controller
file extensions, it's just .php.
[new]: install.php checks environment for correct configuration.

(29th July 2010)
-----------------------------------------------
[new]: changelog
[new]: Spine::Hooks. Hooks can now be added, either via plugins or as files located
in /application/hooks.
[new]: Spine::Plugin. Plugins can be implemented into the system, using hooks, being
called in a controller or by using helpers.
[new]: Template Engine support added for engines such as Smarty. Currently only been
tested to work with the Smarty engine.
[changed]: Registery has been changed to Spine.